# homeserver

server-pm-tool/: Makefile.am  configure.ac
server-pm-tool/conf/: minirc.dfl  setup-server-access.service
server-pm-tool/debian/: control
server-pm-tool/src/: GPIOController.cpp  GPIOController.h  ServerPMTool.cpp  ServerPMTool.h
system-management/: source-project-configs.sh
system-management/bootstrap/: 01_assemble_rfs.sh  02_create-online-package.sh  04_install-software.sh  howto.txt
system-management/bootstrap/boot-conf-files/: armbianEnv.txt  boot.cmd  boot.scr
system-management/bootstrap/files/: interfaces  local-repo.list  resolv.conf
system-management/kernel/: cross-kernel-tools.conf  howto.txt  kernel-6.8.config
system-management/orange_pi_cross_env/: pbuilder-cross-tools.conf  pbuilderrc
system-management/server-pm-tool/: Makefile.am
system-management/server-pm-tool/debian/: changelog
system-management/server-pm-tool/src/: Makefile.am  ServerPMTool.cpp  main.cpp
